modified all the files. Changing the css directory

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="background-container">
     <video id = "index-bg" autoplay loop> 
-        <source src = "/vid/Straw-Hat-Toast-Bg.mp4" type="video/mp4"></src>
+        <source src = "./vid/Straw-Hat-Toast-Bg.mp4" type="video/mp4"></src>
     </video>
 </div>
 
@@ -74,7 +74,7 @@
               </div>
 
               <div class="right-Section  d-sm-none d-lg-block">
-                  <img src="/img/luffy-section-pic.png" class="caption img-fluid" alt="luffy">
+                  <img src="./img/luffy-section-pic.png" class="caption img-fluid" alt="luffy">
                   <div class="img-caption">
                       <strong>Kaizoku ou ni, ore wa naru!</strong>
                   </div>
