fix bugs, not showing images on character.html and shop.html

--- a/characters.html
+++ b/characters.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css-resource/characters.css">
+    <link rel="stylesheet" href="css-resource/characters.css">
     <title>characters page</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
     <div class="carousel-inner">
 
     <div class="carousel-item active">
-        <img src="./img/strawhat-logo.jpg" class="d-block w-100"  alt="Strawhat Pirates">
+        <img src="img/strawhat-logo.jpg" class="d-block w-100"  alt="Strawhat Pirates">
         <div class="carousel-caption">
           <h5>Straw Hat Pirates</h5>
           <p>The Straw Hat Pirates, also known as the Mugiwara Pirates, Straw Hat Crew or simply the Straw Hats.</p>
@@ -82,7 +82,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/luffy-bounty.webp" class="d-block w-100" alt="Zoro-bounty">
+        <img src="new-bounty/luffy-bounty.webp" class="d-block w-100" alt="Zoro-bounty">
         <div class="carousel-caption">
             <h5>Monkey D. Luffy</h5>
             <p><strong><i>Monkey D. Luffy</i></strong> or also known as Mugiwara no Luffy or Luffy for short. 
@@ -95,7 +95,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/zoro-new.webp" class="d-block w-100" alt="Zoro-bounty">
+        <img src="new-bounty/zoro-new.webp" class="d-block w-100" alt="Zoro-bounty">
         <div class="carousel-caption">
           <h5>Ronoroa Zoro</h5>
           <p>Ronoroa Zoro or Zoro is the First mate of Luffy. He has an ambition to become the world greatest swordsman</p>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/sanji-bounty.webp" class="d-block w-100"  alt="Sanji Bounty">
+        <img src="new-bounty/sanji-bounty.webp" class="d-block w-100"  alt="Sanji Bounty">
         <div class="carousel-caption ">
           <h5>Vinsmoke Sanji</h5>
           <p>Sanji is the cook and great nakama of luffy. He wants to find the all blue where in all the fish in the ocean meets.</p>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/GodUsopp-bounty.webp" class="d-block w-100" alt="GOD-USOPP-Bounty">
+        <img src="new-bounty/GodUsopp-bounty.webp" class="d-block w-100" alt="GOD-USOPP-Bounty">
         <div class="carousel-caption">
           <h5>God D. Usopp</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -131,7 +131,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="./new-bounty/nami-bounty.webp" class="d-block w-100" alt="Nami-Bounty">
+        <img src="new-bounty/nami-bounty.webp" class="d-block w-100" alt="Nami-Bounty">
         <div class="carousel-caption">
           <h5>Nami Swan</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/robin-bounty.webp" class="d-block  w-100" alt="Robin-Bounty">
+        <img src="new-bounty/robin-bounty.webp" class="d-block  w-100" alt="Robin-Bounty">
         <div class="carousel-caption">
           <h5>Robin Chwan</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -155,7 +155,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/franky-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
+        <img src="new-bounty/franky-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
         <div class="carousel-caption">
           <h5>Franky</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -167,7 +167,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/brook-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
+        <img src="new-bounty/brook-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
         <div class="carousel-caption">
           <h5>Brook</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -179,7 +179,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/jinbe-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
+        <img src="new-bounty/jinbe-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
         <div class="carousel-caption">
           <h5>Jinbei</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -191,7 +191,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="./new-bounty/chopper-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
+        <img src="new-bounty/chopper-bounty.webp" class="d-block  w-100" alt="GOD-USOPP-Bounty">
         <div class="carousel-caption">
           <h5>Chopper</h5>
           <p>Some representative placeholder content for the third slide.</p>
