--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css-resource/characters.css">
+    <link rel="stylesheet" href="css-resource/characters.css">
     <title>characters page</title>
 </head>
 <body>
@@ -62,7 +62,7 @@
     <div class="carousel-inner">
 
     <div class="carousel-item active">
-        <img src="/figurines/luffy1.png" class="d-block w-100"  alt="Figurine1">
+        <img src="figurines/luffy1.png" class="d-block w-100"  alt="Figurine1">
         <div class="carousel-caption">
           <h5>Luffy Figurine 1</h5>
           <p>$100</p>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="/figurines/luffy-and-chopper.png" class="d-block w-100" alt="Zoro-bounty">
+        <img src="figurines/luffy-and-chopper.png" class="d-block w-100" alt="Zoro-bounty">
         <div class="carousel-caption">
             <h5>Monkey D. Luffy</h5>
             <p><strong><i>Monkey D. Luffy</i></strong> or also known as Mugiwara no Luffy or Luffy for short. 
@@ -85,7 +85,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="/figurines/zoro.png" class="d-block  w-100" alt="Zoro-bounty">
+        <img src="figurines/zoro.png" class="d-block  w-100" alt="Zoro-bounty">
         <div class="carousel-caption">
           <h5>Ronoroa Zoro</h5>
           <p>Ronoroa Zoro or Zoro is the First mate of Luffy. He has an ambition to become the world greatest swordsman</p>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="carousel-item ">
-        <img src="/figurines/zoro1.png" class="d-block w-100"  alt="Sanji Bounty">
+        <img src="figurines/zoro1.png" class="d-block w-100"  alt="Sanji Bounty">
         <div class="carousel-caption ">
           <h5>Vinsmoke Sanji</h5>
           <p>Sanji is the cook and great nakama of luffy. He wants to find the all blue where in all the fish in the ocean meets.</p>
