fix minor bugs, images not showing

--- a/characters.html
+++ b/characters.html
@@ -70,7 +70,7 @@
     <div class="carousel-inner">
 
     <div class="carousel-item active">
-        <img src="img/strawhat-logo.jpg" class="d-block w-100"  alt="Strawhat Pirates">
+        <img src="img/strawhat-logo.png" class="d-block w-100"  alt="Strawhat Pirates">
         <div class="carousel-caption">
           <h5>Straw Hat Pirates</h5>
           <p>The Straw Hat Pirates, also known as the Mugiwara Pirates, Straw Hat Crew or simply the Straw Hats.</p>
