--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css-resource/login.css">
+    <link rel="stylesheet" href="css-resource/login.css">
     <title>Kaizuko Shop </title>
   </head>
   
@@ -16,7 +16,7 @@
       <div class="container">
           <div class="row no-gutters">
             <div class="col-lg-5">
-                <img class="img-fluid" src="/img/login.jpg"  alt="Become my nakama">
+                <img class="img-fluid" src="img/login.jpg"  alt="Become my nakama">
             </div>
 
             <div class="col-lg-7 px-5 pt-5 ">
