fixing changes in bugs

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <div class="row">
                 <div class="col-lg-4 col-md-12 col-12 py-5 px-3">
                     <div class="know-characters">
-                      <img src="img/strawhat-logo.png" alt="Strawhat Logo" class="img-fluid p-0">
+                      <img src="./img/strawhat-logo.png" alt="Strawhat Logo" class="img-fluid p-0">
                     </div>
                 </div>
 
@@ -108,7 +108,7 @@
 
               <div class="col-lg-4 col-md-12 col-12 py-5">
                 <div class="know-characters">
-                  <img src="figurines/luffy-and-chopper.png" alt="Strawhat Logo" class="shop-merch img-fluid">
+                  <img src="./figurines/luffy-and-chopper.png" alt="Strawhat Logo" class="shop-merch img-fluid">
                 </div>
               </div>
 
